fix spacing and over flow issue for messages

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,16 +2,16 @@
   display: block;
   background-color: var(--clr-primary-200);
   border-radius: 13px;
-  max-width: 450px;
+  width: min(400px, 100%);
   position: absolute;
   transform: scale(0);
   right: -150px;
   transition: 300ms ease;
-  bottom: -20%;
+  bottom: -220px;
 
   &.active {
     transform: scale(1);
-    right: 30px;
+    right: 25px;
     bottom: 110px;
   }
 }
@@ -42,7 +42,8 @@
 .reabot-content {
   padding: 10px;
   background-color: var(--clr-neutral-100);
-  min-height: 400px;
+  height: 400px;
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
 }
@@ -88,9 +89,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  bottom: 45px;
+  bottom: 20px;
   padding: 10px;
-  right: 45px;
+  right: 20px;
   width: 50px;
   height: 50px;
   border: none;
